Production Fixes: Resolve White Screen Issue
 Frontend Production Fixes:
- Added ErrorBoundary component for graceful error handling
- Updated AuthContext with backend availability check
- Fixed vercel.json configuration for proper deployment
- Added homepage field to package.json for asset paths
- Set CI=false in build script to handle warnings
- Added fallbacks for production environment

 Configuration Updates:
- Simplified vercel.json with proper rewrites
- Added GENERATE_SOURCEMAP=false for faster builds
- Updated build commands for consistent deployment
- Added production environment checks

 Expected Results:
- No more white screen on Vercel deployment
- Graceful handling when backend is not available
- Better error reporting and user experience
- Proper static file serving and routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,15 @@
 {
-  "version": 2,
-  "name": "pilahpintar",
-  "buildCommand": "cd frontend && npm install && npm run build",
+  "buildCommand": "cd frontend && npm ci && CI=false npm run build",
   "outputDirectory": "frontend/build",
-  "framework": null,
-  "installCommand": "cd frontend && npm install",
-  "routes": [
+  "installCommand": "cd frontend && npm ci",
+  "rewrites": [
     {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot))",
-      "dest": "/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "env": {
-    "CI": "false"
+    "CI": "false",
+    "GENERATE_SOURCEMAP": "false"
   }
 }
