Backend: Prepare for Railway Deployment
 Railway Configuration:
- Updated package.json with proper start script and engines
- Added production environment variables template
- Enhanced CORS configuration for Vercel frontend
- Added build script (no-op for Node.js)
- Set Node.js version requirement (>=18.0.0)

 CORS Improvements:
- Dynamic origin checking for production
- Support for Vercel app domains
- Multiple environment support (local + production)
- Better security with origin validation

 Production Ready:
- Compatible with Railway deployment
- Environment variables configured
- CORS ready for frontend integration
- Proper error handling for deployment

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,12 @@
     "dev": "nodemon src/app.js",
     "seed": "node seed-database.js",
     "test-db": "node test-mongo-connection.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo 'No build step required for Node.js'"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
   "keywords": [
     "waste-classification",
