--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "Platform klasifikasi sampah cerdas menggunakan AI/CNN",
   "main": "index.js",
   "scripts": {
+    "start": "node backend/src/app.js",
     "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
     "backend": "cd backend && npm run dev",
     "frontend": "cd frontend && npm start",
     "install-all": "npm install && cd frontend && npm install && cd ../backend && npm install",
-    "build": "cd frontend && npm run build",
+    "build": "cd backend && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "keywords": [
     "waste-classification",
@@ -28,10 +32,21 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
-    "mongodb": "^6.20.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-scripts": "^5.0.1"
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.37.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.1",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-cloudinary": "^1.2.1",
+    "nodemailer": "^6.9.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1"
   },
   "directories": {
     "doc": "docs"
