--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "seed": "node seed-database.js",
     "test-db": "node test-mongo-connection.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo 'No build step required for Node.js'"
+    "build": "echo 'No build step required for Node.js'",
+    "vercel-build": "echo 'Build completed'"
   },
   "engines": {
     "node": ">=18.0.0",
