fix: resolve build, CORS, and white screen issues
 Build Issues:
- Fix CI=false command for Windows PowerShell
- Update package.json scripts for cross-platform compatibility
- Clean build script without CI override

 CORS Issues:
- Add development environment bypass for CORS
- Include pilahpintar-frontend.vercel.app in allowed origins
- Add OPTIONS method and X-Requested-With header
- Add CORS origin logging for debugging

 White Screen Issues:
- Fix hasBackend logic in AuthContext (always true)
- Add comprehensive logging for environment debugging
- Wrap App in ErrorBoundary for better error handling
- Update vercel.json with environment variables
- Configure .env.production with proper API URLs

 Configuration Updates:
- Add environment variables in vercel.json
- Update production environment file
- Ensure proper API URL configuration for production

All issues should now be resolved for successful Vercel deployment!

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -23,5 +23,11 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ]
+  ],
+  "env": {
+    "REACT_APP_API_URL_PRODUCTION": "https://pilahpintar-backend.vercel.app/api",
+    "REACT_APP_NAME": "PilahPintar",
+    "REACT_APP_VERSION": "1.0.0",
+    "GENERATE_SOURCEMAP": "false"
+  }
 }
