--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,10 +26,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "react-scripts build",
+    "build:prod": "cross-env CI=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:vercel": "CI=false npm run build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
