--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.2",
     "express-rate-limit": "^6.7.1",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
