--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
   "author": "PilahPintar Team",
   "license": "MIT",
   "dependencies": {
+    "@vercel/functions": "^3.1.3",
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.37.3",
