feat: add dual route support and comprehensive migration guides
- Add root routes support for subdomain api.pilahpintar.site
- Keep /api prefix routes for backward compatibility
- Add MIGRATION_TO_VPS.md with complete setup checklist
- Add QUICK_SETUP_SSL.md for fast domain & SSL setup
- Add API_TESTING_GUIDE.md with testing commands
- Add API endpoints documentation with upload/classify details
- Update CORS to include all frontend URLs (Vercel + custom domains)
- Improve trust proxy configuration for Nginx rate limiting
- Update .gitignore to exclude files with OAuth secrets

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,13 @@ dist/
 .env.development.local
 .env.test.local
 .env.production.local
+.env.vps
+backend/.env.vps
+
+# Documentation with secrets (DO NOT COMMIT)
+ENV_SETUP_SUMMARY.md
+ENV_VERIFICATION_CHECKLIST.md
+VERCEL_ENVIRONMENT_VARIABLES.md
 
 # IDE files
 .vscode/
